[gd_scene load_steps=7 format=3 uid="uid://ch0qgxy2xgg56"]

[ext_resource type="Script" path="res://clicker.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bt71slmxadaxg" path="res://bg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://efo8m3xbk40l" path="res://rev.png" id="3"]
[ext_resource type="Texture2D" uid="uid://detaq3ynnonmp" path="res://rev_clicked.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bsjixlm7fx71u" path="res://rev_disabled.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bihfg2aps6awp" path="res://button.png" id="6"]

[node name="Node2D" type="Node2D"]
scale = Vector2(-273.391, -17.4004)
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="background" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(251.78, 351.811)
rotation = -3.14159
scale = Vector2(0.995591, 1.00029)
texture = ExtResource("2")

[node name="rev" type="TextureButton" parent="CanvasLayer"]
offset_left = 138.0
offset_top = 375.0
offset_right = 405.0
offset_bottom = 628.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_disabled = ExtResource("5")
stretch_mode = 4

[node name="pets_label" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 163.0
offset_top = 334.0
offset_right = 331.0
offset_bottom = 365.0
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]How many Pets[/center]"

[node name="title" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 133.0
offset_top = 56.0
offset_right = 371.0
offset_bottom = 107.0
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]Reveille Petter[/center]
"

[node name="info" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 113.0
offset_top = 176.0
offset_right = 392.0
offset_bottom = 275.0
size_flags_horizontal = 4
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Info Text[/center]"

[node name="restart" type="TextureButton" parent="CanvasLayer"]
offset_left = 353.0
offset_top = 654.0
offset_right = 473.0
offset_bottom = 686.0
texture_normal = ExtResource("6")
stretch_mode = 0

[node name="button Label" type="RichTextLabel" parent="CanvasLayer/restart"]
layout_mode = 0
offset_left = 31.0
offset_top = 4.0
offset_right = 104.0
offset_bottom = 34.0
mouse_filter = 2
text = "Restart"

[connection signal="pressed" from="CanvasLayer/rev" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="CanvasLayer/restart" to="." method="_on_restart_pressed"]
